--- a/apps/devops/index.html
+++ b/apps/devops/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Devops</title>
-    <base href="/" />
+    <base href="/react-devops-parrarodriguez" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
